# MinecraftLauncherLibCpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: MinecraftLauncherLib.h
include/MinecraftLauncherLib/: Argument.h  Arguments.h  Command.h  CommandLine.h  Java.h  JavaArguments.h  Libraries.h  MCLLib-api.h  Rules.h  SingleLibrary.h  SingleRule.h  UserArguments.h  UserOptions.h  UserProfile.h  VersionProfile.h
include/MinecraftLauncherLib/Basic/: MinecraftObject.h  Natives.h
include/MinecraftLauncherLib/Core/: Argument.h  Arguments.h  Command.h  Java.h  JavaArguments.h  Libraries.h  Rules.h  SingleLibrary.h  UserArguments.h
include/MinecraftLauncherLib/Download/: DownloadManager.h  DownloadWorker.h  FabricDownloader.h  ForgeDownloader.h  VanillaDownloader.h
include/MinecraftLauncherLib/Types/: Vector.h
include/MinecraftLauncherLib/Utils/: CallbackLevel.h  Delegates.h  JavaUtils.h  JsonUtils.h  Macros.h  MemoryUtils.h  PathUtils.h  Setting.h  StringUtils.h  ThreadPool.h
include/MinecraftLauncherLib/Utils/Archives/: Archive.h
include/MinecraftLauncherLib/Utils/Interfaces/: IDownloader.h  ITask.h
src/: Arguments.cpp  Command.cpp  CommandLine.cpp  DownloadWorker.cpp  FabricDownloader.cpp  ForgeDownloader.cpp  Java.cpp  JavaUtils.cpp  JsonUtils.cpp  Libraries.cpp  MemoryUtils.cpp  MinecraftObject.cpp  Natives.cpp  PathUtils.cpp  Rules.cpp  Setting.cpp  SingleLibrary.cpp  SingleRule.cpp  UserArguments.cpp  UserOptions.cpp  VanillaDownloader.cpp  VersionProfile.cpp
test/: CommandLineGeneratorTest.cpp  LibrariesTest.cpp  SingleLibraryTest.cpp  StringUtilsTest.cpp  VersionProfileTest.cpp
tests/: !test_template.md  CMakeLists.txt  CommandLineTest.cpp  SingleLibraryTest.cpp  StringUtilsTest.cpp  UserOptionsTest.cpp  VersionDownloadTest.cpp  main.cpp
